--- a/reaction.html
+++ b/reaction.html
@@ -13,14 +13,35 @@
 <h2>Chandrakanth reaction timer</h2>
 <p id="target">Your time</p>
 <p id="countdown">Count</p>
-<button type="button" class="btn btn-primary">Smart Timer</button>
-<button type="button" class="btn btn-primary" onclick="recordReact()">React Now</button>
+<button type="button" class="btn btn-success" onclick="startTime()">Smart Timer</button>
+<button type="button" class="btn btn-info" onclick="recordReact()">React Now</button>
 <script>
-  let myTime = undefined
+  let myTime = Date.now()
   function recordReact()
   {
     myTime = Date.now()
     console.log(myTime)
+  }
+
+  function startTime()
+  {
+    for(let i=0;i<4;i++)
+    {
+      setTimeout(function(){
+      document.getElementById('countdown').innerHTML = i
+      }, (3-i)*3000)
+    }
+    setTimeout(()=>{
+      if(myTime == undefined)
+      {
+        document.getElementById('target').innerHTML = "Too Slow"
+      }
+      else
+      {
+        let buttonTime = Date.now()
+        document.getElementById('target').innerHTML = "Time was "+(buttonTime - myTime)
+      }
+      }, 3000)
   }
 </script>
 </body>
