--- a/cycler.html
+++ b/cycler.html
@@ -35,6 +35,7 @@
 	<button onclick="makeNewDiv()">Add value</button>
 	<button onclick="get()">Get</button>
 	<button onclick="spin()">Spin</button>
+	<button onclick="swap()">Swap</button>
 </body>
 <script>
 	function makeNewDiv()
@@ -66,5 +67,20 @@
 			container.insertBefore(removedItem, container.firstChild)
 		}
 	}
+	function swap()
+	{
+        let cyclerItems = document.getElementsByClassName("cycler")
+        let container = document.getElementById("target")
+        let a = Math.floor(Math.random() * cyclerItems.length)
+        let b = Math.floor(Math.random() * cyclerItems.length)
+        let firstInnerText = document.getElementsByClassName("cycler")[a]
+        let secondInnerText = document.getElementsByClassName("cycler")[b]
+        if(cyclerItems.length > 1)
+		{
+        	let temp = firstInnerText.innerHTML
+        	firstInnerText.innerHTML = secondInnerText.innerHTML
+        	secondInnerText.innerHTML = temp
+        }
+    }
 </script>
 </html>	
