--- a/reaction.html
+++ b/reaction.html
@@ -25,11 +25,12 @@
 
   function startTime()
   {
-    for(let i=0;i<4;i++)
+    let countdown = Math.floor(Math.random() * 9)+2
+    for(let i=0;i<countdown;i++)
     {
       setTimeout(function(){
       document.getElementById('countdown').innerHTML = i
-      }, (3-i)*1000)
+      }, (countdown-1-i)*1000)
     }
     setTimeout(()=>{
       if(myTime == undefined)
